Refactor code to use modern Java features and improve error handling